--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "Proof of concept",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fforneck/automationpoc.git"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd client && bower install"
   },
   "author": "",
   "license": "ISC",
