--- a/client/bower.json
+++ b/client/bower.json
@@ -16,6 +16,7 @@
     "socket.io-client": "~1.3.5",
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.4",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "angular.treeview": "*"
   }
 }
